# Projetct_Processamento

./: README.md  pyproject.toml
projeto_processamento_dados/: Projeto.ipynb
tests/: __init__.py
